Show status in post fragment

--- a/res/layout/fragment_post.xml
+++ b/res/layout/fragment_post.xml
@@ -40,7 +40,7 @@
             android:id="@+id/post_inreplyto_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@android:color/holo_orange_light"
             android:visibility="gone">
 
             <include
