Implement search page system: EditText and execute button

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -50,4 +50,5 @@
     <attr name="icon_retweet_off" format="reference"/>
     <attr name="icon_favorite_off" format="reference"/>
     <attr name="icon_garbage" format="reference"/>
+    <attr name="icon_search" format="reference"/>
 </resources>
