--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -53,6 +53,7 @@
         <item name="icon_favorite_off">@drawable/icon_favorite_off_white</item>
         <item name="icon_garbage">@drawable/icon_garbage_white</item>
         <item name="icon_search">@drawable/icon_search_white</item>
+        <item name="icon_labels">@drawable/icon_labels_white</item>
     </style>
 
     <style name="theme_light" parent="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -83,6 +84,7 @@
         <item name="icon_favorite_off">@drawable/icon_favorite_off</item>
         <item name="icon_garbage">@drawable/icon_garbage</item>
         <item name="icon_search">@drawable/icon_search</item>
+        <item name="icon_labels">@drawable/icon_labels</item>
     </style>
 
     <style name="custom_button_transparent">
