--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -53,4 +53,5 @@
     <item name="key_command_message_delete" type="id"/>
     <item name="key_command_status_add_to_reply" type="id"/>
     <item name="key_command_status_open_chain" type="id"/>
+    <item name="key_command_status_add_to_ignore" type="id"/>
 </resources>
