--- a/res/layout/dialog_app_info.xml
+++ b/res/layout/dialog_app_info.xml
@@ -59,28 +59,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
-                    android:textSize="20dp"
-                    />
+                    android:textSize="20sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_version"
-                    android:textSize="16dp"
-                    />
+                    android:text="@string/app_version_full"
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_author"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_url"
-                    android:textSize="12dp"
+                    android:textSize="12sp"
                     android:autoLink="web"
                     />
 
@@ -94,14 +92,14 @@
             android:gravity="center_horizontal"
             android:text="@string/app_thanks_to"
             android:textStyle="bold"
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/thanks_to"
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
 
     </LinearLayout>
 </ScrollView>
