--- a/res/values/app_info.xml
+++ b/res/values/app_info.xml
@@ -30,5 +30,5 @@
     <string name="app_url">http://smileessence.lacolaco.net</string>
     <string name="app_author">Developed by laco0416</string>
     <string name="app_thanks_to">Thanks to</string>
-    <string name="thanks_to">miz_hi, yaplus</string>
+    <string name="thanks_to">miz_hi, yaplus, firstspring1845, ahiru3net, unyuho123</string>
 </resources>
