--- a/res/xml/setting.xml
+++ b/res/xml/setting.xml
@@ -33,6 +33,7 @@
             android:title="@string/setting_text_size_title"
             android:key="@string/key_setting_text_size"
             android:defaultValue="10"
+            android:maxLength="2"
             android:dialogTitle="@string/setting_text_size_dialog_title"
             android:dialogMessage="@string/setting_text_size_dialog_message"
             android:numeric="decimal"/>
@@ -74,7 +75,8 @@
             android:key="@string/key_setting_timelines"
             android:dialogTitle="@string/setting_timelines_dialog_title"
             android:dialogMessage="@string/setting_timelines_dialog_message"
-            android:defaultValue="20"/>
+            android:defaultValue="20"
+            android:maxLength="3"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/setting_category_about_title">
         <Preference
