--- a/res/layout/dialog_status_detail.xml
+++ b/res/layout/dialog_status_detail.xml
@@ -24,68 +24,97 @@
   ~ SOFTWARE.
   -->
 
-<LinearLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include
-        android:id="@+id/layout_status_header"
-        layout="@layout/list_item_status"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="2dp"
-        android:baselineAligned="false"
-        android:layout_gravity="right">
+        android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/button_status_detail_reply"
-            style="?attr/custom_button_transparent"
-            android:layout_width="55dp"
-            android:layout_height="30dp"
-            android:padding="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="?attr/icon_message"
-            android:contentDescription=""/>
+        <include
+            android:id="@+id/layout_status_header"
+            layout="@layout/list_item_status"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
 
-        <ImageButton
-            android:id="@+id/button_status_detail_retweet"
-            style="?attr/custom_button_transparent"
-            android:layout_width="55dp"
-            android:layout_height="30dp"
-            android:padding="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="?attr/icon_retweet_off"
-            android:contentDescription=""/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="2dp"
+            android:baselineAligned="false"
+            android:layout_gravity="right">
 
-        <ImageButton
-            android:id="@+id/button_status_detail_favorite"
-            style="?attr/custom_button_transparent"
-            android:layout_width="55dp"
-            android:layout_height="30dp"
-            android:padding="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="?attr/icon_favorite_off"
-            android:contentDescription=""/>
+            <ImageButton
+                android:id="@+id/button_status_detail_reply"
+                style="?attr/custom_button_transparent"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="?attr/icon_message"
+                android:contentDescription=""/>
 
-        <ImageButton
-            android:id="@+id/button_status_detail_delete"
-            style="?attr/custom_button_transparent"
-            android:layout_width="55dp"
-            android:layout_height="30dp"
-            android:padding="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="?attr/icon_garbage"
-            android:contentDescription=""/>
+            <ImageButton
+                android:id="@+id/button_status_detail_retweet"
+                style="?attr/custom_button_transparent"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="?attr/icon_retweet_off"
+                android:contentDescription=""/>
+
+            <ImageButton
+                android:id="@+id/button_status_detail_favorite"
+                style="?attr/custom_button_transparent"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="?attr/icon_favorite_off"
+                android:contentDescription=""/>
+
+            <ImageButton
+                android:id="@+id/button_status_detail_delete"
+                style="?attr/custom_button_transparent"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="?attr/icon_garbage"
+                android:contentDescription=""/>
+
+            <ImageButton
+                android:id="@+id/button_status_detail_menu"
+                style="?attr/custom_button_transparent"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="?attr/icon_post_row"
+                android:contentDescription=""/>
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="?attr/color_list_divider"/>
+
+        <ListView
+            android:id="@+id/listview_status_detail_reply_to"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="100dp"/>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
