--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -46,4 +46,5 @@
     <item name="key_command_status_add_to_reply" type="id"/>
     <item name="key_command_status_open_chain" type="id"/>
     <item name="key_command_status_add_to_ignore" type="id"/>
+    <item name="key_command_status_search_on_google" type="id"/>
 </resources>
