Close #61 Review command is back!!!!

--- a/res/values/commands.xml
+++ b/res/values/commands.xml
@@ -49,4 +49,5 @@
     <item name="key_command_status_search_on_google" type="id"/>
     <item name="key_command_status_copy" type="id"/>
     <item name="key_command_status_congratulate" type="id"/>
+    <item name="key_command_status_review" type="id"/>
 </resources>
