--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -48,4 +48,5 @@
     <string name="key_page_list_visibility">pageListVisibility</string>
     <string name="key_page_list_position">pageListPosition</string>
     <string name="key_setting_extend_status_url">extendStatusURL</string>
+    <string name="key_setting_resize_post_image">resizePostImage</string>
 </resources>
